kubernetes-logging/hipster-chart/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-front-end
  labels:
    name: front-end
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
   tls:
   - hosts:
     - shop.35.232.62.103.nip.io
     secretName: hypsershop.tls
   rules:
   - host: shop.35.232.62.103.nip.io
     http:
       paths:
       - path: /
         backend:
           serviceName: frontend
           servicePort: 8081
